add the possibility to use local folder to store views and data json files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,11 @@ export(readView)
 export(repCol)
 export(repRow)
 export(saveJSON)
+export(useThisFolder)
 export(visu)
 export(visualize)
 exportClasses(server)
 exportClasses(visualization)
+exportMethods(useThisFolder)
 exportMethods(visualize)
+importFrom(utils,tail)
