feat: adding translate option for running into docker and resolves #4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,4 +17,5 @@ exportClasses(server)
 exportClasses(visualization)
 exportMethods(useThisFolder)
 exportMethods(visualize)
+importFrom(methods,hasArg)
 importFrom(utils,tail)
