--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,13 +14,14 @@ Depends: R (>= 3.1.0)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.1
 Imports:
   jsonlite (>= 1.5),
   servr (>= 0.10),
   base64enc,
   methods,
-  car
+  car,
+  rstudioapi
 Suggests:
     testthat,
     covr,
