fix: fixing tests for websocket server

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(readView)
 export(repCol)
 export(repRow)
 export(saveJSON)
+export(startWSServer)
 export(useThisFolder)
 export(visu)
 export(visualize)
