--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,12 +16,13 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Imports:
-  jsonlite (>= 1.5),
-  servr (>= 0.10),
-  base64enc,
-  methods,
-  car,
-  rstudioapi
+    jsonlite (>= 1.5),
+    servr (>= 0.10),
+    base64enc,
+    methods,
+    car,
+    rstudioapi,
+    httpuv
 Suggests:
     testthat,
     covr,
