--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,5 +19,10 @@ exportClasses(server)
 exportClasses(visualization)
 exportMethods(useThisFolder)
 exportMethods(visualize)
+importFrom(jsonlite,fromJSON)
+importFrom(jsonlite,toJSON)
 importFrom(methods,hasArg)
+importFrom(rstudioapi,translateLocalUrl)
+importFrom(utils,capture.output)
+importFrom(utils,str)
 importFrom(utils,tail)
