--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,server)
 S3method(print,visualization)
 export(appendData)
 export(checkMetadata)
+export(exportReIm)
 export(getColor2)
 export(initServer)
 export(push)
